creusot/tests/should_fail/prusti/partial_zombie/tuple.rs
extern crate creusot_contracts;
use creusot_contracts::prusti_prelude::*;

#[ensures(x == x)]
fn test(x: (&mut u32, u32)) {}
