creusot/tests/should_fail/prusti/partial_zombie/tuple.stderr
error[creusot]: binary operation `==` cannot be applied to type `(creusot_contracts::prusti_prelude::Zombie<&'curr mut u32>, u32)` since it doesn't implement `SnapEq`
 --> tuple.rs:4:11
  |
4 | #[ensures(x == x)]
  |           ^

error: aborting due to previous error

